# rust_RCLI_base64

./: Cargo.toml  tmp.b64
src/: lib.rs  main.rs  opts.rs  process.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  mod.rs
