[package]
name = "RCLI"
version = "0.1.0"
authors = ["linyz <1902829444@qq.com>"]
edition = "2024"


[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
structopt = "0.3.26"
